# BirdNET-Analyzer

./: .gitignore  README.md  installation.html  pyproject.toml  searchindex.js
.doctrees/: installation.doctree
.github/workflows/: ci.yml  documentation.yml  lint.yml  publish.yml  test-publish.yml
birdnet_analyzer/: __init__.py  audio.py  cli.py  config.py  eBird_taxonomy_codes_2024E.json  model.py  translate.py  utils.py
birdnet_analyzer/analyze/: __init__.py  __main__.py  cli.py  core.py  utils.py
birdnet_analyzer/embeddings/: __init__.py  __main__.py  cli.py  core.py  utils.py
birdnet_analyzer/evaluation/: __init__.py  __main__.py  core.py
birdnet_analyzer/evaluation/assessment/: metrics.py  performance_assessor.py  plotting.py
birdnet_analyzer/evaluation/preprocessing/: data_processor.py  utils.py
birdnet_analyzer/gui/: __init__.py  analysis.py  embeddings.py  evaluation.py  localization.py  multi_file.py  review.py  segments.py  settings.py  single_file.py  species.py  train.py  utils.py  visualization.py
birdnet_analyzer/gui/assets/: gui.css
birdnet_analyzer/labels/V2.4/: BirdNET_GLOBAL_6K_V2.4_Labels_ar.txt  BirdNET_GLOBAL_6K_V2.4_Labels_bg.txt  BirdNET_GLOBAL_6K_V2.4_Labels_cs.txt  BirdNET_GLOBAL_6K_V2.4_Labels_da.txt  BirdNET_GLOBAL_6K_V2.4_Labels_el.txt  BirdNET_GLOBAL_6K_V2.4_Labels_es.txt  BirdNET_GLOBAL_6K_V2.4_Labels_fi.txt  BirdNET_GLOBAL_6K_V2.4_Labels_fr.txt  BirdNET_GLOBAL_6K_V2.4_Labels_hu.txt  BirdNET_GLOBAL_6K_V2.4_Labels_in.txt  BirdNET_GLOBAL_6K_V2.4_Labels_it.txt  BirdNET_GLOBAL_6K_V2.4_Labels_ja.txt  BirdNET_GLOBAL_6K_V2.4_Labels_ko.txt  BirdNET_GLOBAL_6K_V2.4_Labels_lt.txt  BirdNET_GLOBAL_6K_V2.4_Labels_nl.txt  BirdNET_GLOBAL_6K_V2.4_Labels_no.txt  BirdNET_GLOBAL_6K_V2.4_Labels_pt_BR.txt  BirdNET_GLOBAL_6K_V2.4_Labels_pt_PT.txt  BirdNET_GLOBAL_6K_V2.4_Labels_ro.txt  BirdNET_GLOBAL_6K_V2.4_Labels_ru.txt  BirdNET_GLOBAL_6K_V2.4_Labels_sk.txt  BirdNET_GLOBAL_6K_V2.4_Labels_sl.txt  BirdNET_GLOBAL_6K_V2.4_Labels_sr.txt  BirdNET_GLOBAL_6K_V2.4_Labels_sv.txt  BirdNET_GLOBAL_6K_V2.4_Labels_tr.txt  BirdNET_GLOBAL_6K_V2.4_Labels_uk.txt  BirdNET_GLOBAL_6K_V2.4_Labels_zh.txt
birdnet_analyzer/lang/: de.json  en.json  fi.json  fr.json  id.json  pt-br.json  ru.json  se.json  tlh.json  zh_TW.json
birdnet_analyzer/network/: __init__.py  client.py  server.py  utils.py
birdnet_analyzer/search/: __init__.py  __main__.py  cli.py  core.py  utils.py
birdnet_analyzer/segments/: __init__.py  __main__.py  cli.py  core.py  utils.py
birdnet_analyzer/species/: __init__.py  __main__.py  cli.py  core.py  utils.py
birdnet_analyzer/train/: __init__.py  __main__.py  cli.py  core.py  utils.py
birdnet_analyzer/visualization/: core.py  data_processor.py
birdnet_analyzer/visualization/plotting/: confidences.py  time_distributions.py
birdnet_analyzer/visualization/utils/: coordinates.py
docs/: installation.rst
docs/usage/: cli.rst
tests/analyze/: test_analyze.py
tests/assessment/: test_metrics.py
tests/evaluation/assessment/: test_metrics.py  test_performance_assessor.py  test_plotting.py
tests/evaluation/preprocessing/: test_data_processor.py  test_utils.py
usage/: cli.html
